# CompMindset-ASG2

./: CONTRIBUTING.md  pyproject.toml  pytest.ini  readme.md  requirements.txt  setup.py  wsgi.py
App/: default_config.py  main.py
App/controllers/: __init__.py  attendance.py  auth.py  auth_controller.py  base.py  base_controller.py  initialize.py  report.py  request.py  shift.py  shift_controller.py  user.py
App/models/: __init__.py  admin.py  attendance.py  report.py  request.py  shift.py  staff.py  user.py
App/tests/: test_api_additional_endpoints.py  test_api_endpoints.py  test_app.py  test_base_controller_unit.py  test_controllers_integration.py  test_models_unit.py
App/views/: __init__.py  attendance_api.py  auth.py  report_api.py  shift_api.py  user.py
postman/: Assignment 2 Env.postman_environment.json  CompMindset_Asg2.postman_collection.json
